--- a/public/css/index.css
+++ b/public/css/index.css
@@ -6,6 +6,11 @@ body, html {
   font-family: 'Roboto Slab';
   margin: 0; }
 
+.blue_bar {
+  background-color: #5D89DA;
+  width: 100%;
+  height: 10px; }
+
 aside {
   display: flex;
   justify-content: center; }
@@ -35,8 +40,17 @@ h3 {
   font-size: 140%;
   font-weight: normal; }
 
+h2 + h3 {
+  margin: 20px; }
+
 .event {
-  display: flex; }
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.texte {
+  width: 150%;
+  margin: 20px; }
 
 .event_date {
   color: #FFC252;
@@ -56,9 +70,11 @@ p {
   color: #FFFFFF;
   text-decoration: none;
   font-size: 120%;
-  padding: 10px; }
+  padding: 10px;
+  float: right; }
 
-.eventimg {
-  width: 100%; }
+.img_event {
+  width: 100%;
+  margin: 20px; }
 
 /*# sourceMappingURL=index.css.map */
