--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -8,6 +8,16 @@ body,html
     margin:0;
 }
 
+// BLUE BAR OF SEPARATION
+
+.blue_bar
+{
+    background-color: $blue;
+    width: 100%;
+    height: 10px;
+}
+
+
 // WELCOME ASIDE
 
 aside
@@ -52,17 +62,28 @@ h3
     font-weight: normal;
 }
 
+h2+h3
+{
+    margin : 20px;
+}
+
 .event
 {
     display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+.texte
+{
+    width: 150%;
+    margin: 20px;
 }
 
 .event_date
 {
     color: $orange;
     font-weight: bold;
-
-    
 }
 
 p
@@ -78,6 +99,7 @@ p
     text-transform: uppercase;
 }
 
+
 .show
 {
     background-color : $blue;
@@ -85,12 +107,13 @@ p
     text-decoration: none;
     font-size: 120%;
     padding : 10px;
-    
-    
+    float: right;
+
 
 }
 
-.eventimg
-{
+.img_event
+{ 
    width: 100%; 
+   margin : 20px;
 }
