--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,7 +1,6 @@
-@import url("https://fonts.googleapis.com/css?family=Nunito");
-/*$font-family-sans-serif: 'Nunito', sans-serif;
+@import url(https://fonts.googleapis.com/css?family=Nunito);/*$font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;*/
+
 /*@import '~bootstrap/scss/bootstrap';*/
 
-/*# sourceMappingURL=app.css.map */
