--- a/_experiments/public/css/header.css
+++ b/_experiments/public/css/header.css
@@ -1,5 +1,5 @@
 .menu{
-    background: red;
+    background: black;
     width: 100%;
     height: 66px;
     line-height: 66px;
@@ -14,6 +14,19 @@
     font-weight: 900;
     font-size: 35px;
     letter-spacing: 1px;
+    z-index: 99;
+}
+
+.cesi{
+    max-height: 75px;
+    max-width: 75px;
+    float: left;
+    top: 0;
+}
+
+.logocesi{
+    width: 65px;
+    height: 65px;
 }
 
 .m-left{
@@ -30,5 +43,96 @@
     text-transform: uppercase;
     font-weight: 700;
     padding: 0;
-    margin: 0 10px;
+    margin: 0 15px;
+
+    border-bottom: 2px solid transparent;
+    display: inline-block;
+    height: 64px;
 }
+
+.m-link:hover{
+    border-color: white;
+}
+
+.m-link i{
+    margin-right: 5px;
+}
+
+.m-nav-toggle{
+    width: 40px;
+    height: 66px;
+
+    display: none;
+    align-items: center;
+    float: right;
+    cursor: pointer;
+}
+
+span.m-toggle-icon, span.m-toggle-icon:before, span.m-toggle-icon:after{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 3px;
+    background: #fff;
+    transition: all 0.3s ease-in-out;
+    position: relative;
+
+}
+
+span.m-toggle-icon:before{top: 12px;}
+span.m-toggle-icon:after{top: -14px;}
+
+@media only screen and (max-width: 1100px){
+    .m-right{
+        position: absolute;
+        top: 0;left: 0;right: 0;
+        width: 100%;
+        height: auto;
+        background: black;
+        transform: translateY(-100%);
+        transition: all 0.3s ease-in-out;
+        z-index: -1;
+    }
+    .m-link{
+        display: block;
+        text-align: center ;
+        padding: 0;
+        margin: 0 20px;
+        height: 55px;
+        width: 200px;
+        margin: auto;
+    }
+        .m-nav-toggle{
+        display: flex;
+    }
+
+ }
+
+ .m-right.is-open{
+     transform: translateX(0);
+     top: 66px;
+ }
+
+ .m-nav-toggle.is-open span.m-toggle-icon{
+    background: transparent;
+ }
+
+ .m-nav-toggle.is-open span.m-toggle-icon:before, .m-nav-toggle.is-open span.m-toggle-icon:after{
+    transform-origin: center;
+    transform: rotate(45deg);
+    top: 0;
+ }
+
+ .m-nav-toggle.is-open span.m-toggle-icon:after{
+    transform: rotate(-45deg);     
+ }
+
+ span.searchbar{
+     float: left;
+     display: block;
+     color: black;
+     text-align: center;
+     padding: 14px 16px;
+     text-decoration: none;
+     font-size: 17px;
+ }
