--- a/_experiments/public/css/normalize.css
+++ b/_experiments/public/css/normalize.css
@@ -5,9 +5,10 @@ html, body{
     margin : 0;
     padding: 0;
     font-family: 'Lato';
+    overflow-x: hidden;
 }
 
 .inner{
-    width: 80%;
+    width: 95%;
     margin: auto;
 }
