--- a/public/css/header.css
+++ b/public/css/header.css
@@ -3,9 +3,30 @@
     width: 100%;
     height: 66px;
     line-height: 66px;
+    position: fixed;
+    z-index: 10;
+    
 }
 
-.logo{
+.nav_left
+{
+    background-color: black;
+    width: 15%;
+    height: 100%;
+    z-index: 9;
+    position: fixed;
+}
+
+.logo_cesi_ingenieur
+{
+    background-color: white;
+    width: 80%;
+    z-index: 23;
+    margin-top: 66px;
+    padding: 10%;
+}
+
+.bde{
     margin: 0;
     padding: 0;
     color: white;
@@ -31,6 +52,7 @@
 
 .m-left{
     float: left;
+    height: 66px;
 }
 
 .m-right{
@@ -135,4 +157,42 @@ span.m-toggle-icon:after{top: -14px;}
      padding: 14px 16px;
      text-decoration: none;
      font-size: 17px;
+ }
+
+ footer
+ {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: black;
+    width: 100%;
+    height: 66px;
+ }
+
+ .logo_footer
+ {
+     z-index: 92;
+     background-color: white;
+     width: 15%;
+     height: 66px;
+ }
+
+ .footer_cesi
+ {
+     width: 50%;
+     padding-left : 10%;
+     padding-right : 10%;
+
+ }
+ .footer_bde
+ {
+     width: 20%;
+
+ }
+
+ .footer_link
+ {
+     text-decoration: none;
+     color: white;
+     margin: 5%;
  }
