--- a/public/css/normalize.css
+++ b/public/css/normalize.css
@@ -2,9 +2,8 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900&display=swap');
 
 html, body{
-    margin : 0;
-    padding: 0;
-    font-family: 'Lato';
+    font-family: 'Roboto Slab';
+    margin: 0;
     overflow-x: hidden;
 }
 
