--- a/resources/sass/home.scss
+++ b/resources/sass/home.scss
@@ -2,12 +2,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap');
 
 
-body,html
-{
-    font-family: 'Roboto Slab';
-    margin:0;
-}
-
 // BLUE BAR OF SEPARATION
 
 .blue_bar
@@ -24,6 +18,7 @@ body,html
 {
     display: flex;
     justify-content: center;
+    margin-left: 15%
 }
 
 .welcome_img
@@ -46,6 +41,7 @@ body,html
 {
 
     width: 50%;
+    z-index: 8;
 }
 
 .titre
