--- a/public/css/index.css
+++ b/public/css/index.css
@@ -35,6 +35,10 @@ h2 {
   font-size: 180%;
   font-weight: normal; }
 
+.t2 {
+  font-size: 160%;
+  text-align: left; }
+
 h3 {
   color: #000000;
   font-size: 140%;
@@ -76,5 +80,13 @@ p {
 .img_event {
   width: 100%;
   margin: 20px; }
+
+.create {
+  background-color: #5D89DA;
+  color: #FFFFFF;
+  text-decoration: none;
+  font-size: 120%;
+  padding: 10px;
+  margin: 15%; }
 
 /*# sourceMappingURL=index.css.map */
