--- a/resources/sass/home.scss
+++ b/resources/sass/home.scss
@@ -31,39 +31,29 @@
 {
     position: absolute;
     display: flex;
-    //border: solid;
     align-items: center;
     flex-direction: column;
-    margin:15%;
+    margin-top: 50pt;
 }
 
 .logo
 {
-
     width: 50%;
     z-index: 8;
 }
 
 .titre
 {
-    font-size: 250%;
+    font-size: 36pt;
     color : $black;
     text-align: center;
     font-weight : bold;
-    //border:solid;
+
 
 }
 
-.link
-{
-    position: absolute;
-    font-size: 250%;
-    width: 450px;
-    text-align: center;
-    font-weight : normal;
-    margin : 15%;
-    
-}
+// EVENTS AND SHOP PRESENTATION
+
 
 .show
 {
@@ -72,10 +62,59 @@
     color : $white;
     text-align: center;
     position: absolute;
-    font-size: 250%;
+    font-size: 36pt;
     width: 450px;
     font-weight : normal;
-    margin : 15%;
+    margin-top : 10%;
     text-decoration: none;
 
 }
+
+
+//MEDIA QUERIES FOR PC AND IPAD
+
+@media screen and (max-width: 1100px)
+{
+    .presentation
+    {
+        width: 20%;
+        min-width: 150px ;
+    }
+
+    .titre
+    {
+        font-size: 120%;
+    }
+
+    .show
+    {
+        width: 20%;
+        min-width: 180px;
+        font-size:120%;
+    }
+}
+
+//MEDIA QUERIES FOR PHONE
+
+@media all and (max-device-width : 480px )
+{
+    .presentation
+    {
+        width: 240px;
+
+    }
+    .titre
+    {
+
+        font-size: 25pt;
+        color: red;
+    }
+
+    .show
+    {
+        font-size: 25pt;
+        width: 350px;
+    }
+
+}
+
