--- a/public/css/home.css
+++ b/public/css/home.css
@@ -34,15 +34,17 @@ $line-height-base: 1.6;*/
   font-weight: bold; }
 
 .show {
-  background-color: #5D89DA;
-  color: #FFFFFF;
-  text-align: center;
   position: absolute;
-  font-size: 36pt;
   width: 450px;
+  font-size: 36pt;
+  text-align: center;
+  background-color: #5D89DA;
   font-weight: normal;
-  margin-top: 10%;
-  text-decoration: none; }
+  margin-top: 10%; }
+
+.link {
+  text-decoration: none;
+  color: #FFFFFF; }
 
 @media screen and (max-width: 1100px) {
   .presentation {
