--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -14,19 +14,20 @@
 
 // WELCOME ASIDE
 
-aside
+.welcome
 {
     display: flex;
     justify-content: center;
     margin-left: 15%
 }
 
-.welcome
+.welcome_img
 {
     width: 100%;
     opacity: 0.6;
 }
-aside > h1
+
+.welcome_t
 {
     font-size: 250%;
     background-color: $blue;
@@ -35,7 +36,7 @@ aside > h1
     font-weight : normal;
     width: 450px;
     position: absolute;
-    margin : 15%;
+    margin-top : 15%;
 
 }
 
@@ -43,10 +44,10 @@ aside > h1
 
 .events
 {
-    margin-left: 15%
+    margin-left: 16%
 }
 
-h2
+.t1
 {
     color : $black;
     text-align: center;
@@ -59,31 +60,28 @@ h2
 {
     font-size: 160%;
     text-align: left;
+    color : $black;
+    font-weight : normal;
 }
 
-h3
+.event_date
 {
     color: $black;
     font-size: 140%;
     font-weight: normal;
 }
 
-h2+h3
-{
-    margin : 20px;
-}
 
 .event
 {
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: flex-start;
 
 }
 .texte
 {
     width: 150%;
-    margin: 20px;
 }
 
 .event_date
@@ -92,11 +90,13 @@ h2+h3
     font-weight: bold;
 }
 
-p
+.location + .description
 {
     color: $black;
     font-size: 120%;
 }
+
+
 
 .name
 {
@@ -114,13 +114,15 @@ p
     font-size: 120%;
     padding : 10px;
     float: right;
+    margin-right:10px ;
+    margin-bottom: 10px;
 
 
 }
 
 .img_event
 {
-   width: 100%;
+   width: 600px;
    margin : 20px;
 }
 
@@ -135,3 +137,34 @@ p
     padding : 10px;
     margin: 15%;
 }
+//MEDIA QUERIES FOR PC AND IPAD
+
+@media screen and (max-width: 1100px)
+{
+
+    .welcome_t
+    {
+        width: 320px;
+        min-width: 180px;
+        font-size:200%;
+    }
+
+    .img_event
+    {
+        width: 300px;
+    }
+}
+
+//MEDIA QUERIES FOR PHONE
+
+@media all and (max-device-width : 480px )
+{
+
+    .welcome_t
+    {
+        font-size: 25pt;
+        width: 350px;
+    }
+
+}
+
