--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -149,10 +149,24 @@
         font-size:200%;
     }
 
+    .event
+    {
+
+        flex-direction :column;
+        align-items: center;
+
+    }
+
     .img_event
     {
-        width: 300px;
+        width: 550px;
     }
+
+    .texte
+    {
+        width: 550px;
+    }
+
 }
 
 //MEDIA QUERIES FOR PHONE
