Responsive welcome and test background image

--- a/resources/sass/home.scss
+++ b/resources/sass/home.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap');
 
 body{ overflow-y: hidden}
+
 // BLUE BAR OF SEPARATION
 
 .blue_bar
@@ -18,12 +19,17 @@ body{ overflow-y: hidden}
 {
     display: flex;
     justify-content: center;
-    margin-left: 15%
+    margin-left: 15%;
+    margin-top: 66px;
+    /*background-image: url("/img/bde.jpeg");
+    background-position: center;
+    height: 800px;
+    width: 100%;*/
 }
 
 .welcome_img
 {
-    width: 100%;
+    width: 100vw;
     opacity: 0.6;
 }
 
@@ -33,7 +39,8 @@ body{ overflow-y: hidden}
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-top: 50pt;
+    margin-top: 10px;
+
 }
 
 .logo
@@ -54,6 +61,25 @@ body{ overflow-y: hidden}
 
 // EVENTS AND SHOP LINK
 
+/*.welcome1
+{
+    display: flex;
+    justify-content: center;
+    margin-left: 15%;
+    background-image: url("/img/evenement.jpeg");
+    background-position: center;
+    height: 800px;
+    width: 100vw;
+
+}*/
+
+.welcome_link
+{
+    display: flex;
+    justify-content: center;
+    margin-left: 15%;
+}
+
 .show
 {
     position: absolute;
@@ -73,11 +99,9 @@ body{ overflow-y: hidden}
 }
 
 
-
-
 //MEDIA QUERIES FOR PC AND IPAD
 
-@media screen and (max-width: 1100px)
+/*@media screen and (max-width: 1100px)
 {
     .presentation
     {
@@ -96,7 +120,7 @@ body{ overflow-y: hidden}
         min-width: 180px;
         font-size:120%;
     }
-}
+}*/
 
 //MEDIA QUERIES FOR PHONE
 
@@ -104,20 +128,29 @@ body{ overflow-y: hidden}
 {
     .presentation
     {
-        width: 240px;
+        width: 160px;
 
     }
+
     .titre
     {
 
-        font-size: 25pt;
+        font-size: 15pt;
     }
 
     .show
     {
-        font-size: 25pt;
-        width: 350px;
+        font-size: 15pt;
+        width: 150px;
     }
+
 
 }
 
+/*@media all and (device-width: 812px) and (device-height: 375px)
+{
+    .welcome_img
+    {
+        height: 800px;
+    }
+}*/
