--- a/public/css/header.css
+++ b/public/css/header.css
@@ -5,7 +5,7 @@
     line-height: 66px;
     position: fixed;
     z-index: 10;
-    
+
 }
 
 .nav_left
@@ -25,6 +25,7 @@
     z-index: 23;
     margin-top: 66px;
     padding: 10%;
+    /*box-shadow: 8px 8px 8px #aaa;*/
 }
 
 .bde{
@@ -67,19 +68,16 @@
     font-weight: 700;
     padding: 0;
     margin: 0 15px;
-
     border-bottom: 2px solid transparent;
-    display: inline-block;
     height: 64px;
+
+
 }
 
 .m-link:hover{
     border-color: white;
 }
 
-.m-link i{
-    margin-right: 5px;
-}
 
 .m-nav-toggle{
     width: 40px;
@@ -89,6 +87,13 @@
     align-items: center;
     float: right;
     cursor: pointer;
+}
+
+.basket , .login , .co
+{
+    width: 35px;
+
+    margin-right: 5px;
 }
 
 span.m-toggle-icon, span.m-toggle-icon:before, span.m-toggle-icon:after{
@@ -104,6 +109,56 @@ span.m-toggle-icon, span.m-toggle-icon:before, span.m-toggle-icon:after{
 
 span.m-toggle-icon:before{top: 12px;}
 span.m-toggle-icon:after{top: -14px;}
+
+footer
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: black;
+    width: 100%;
+    height: 66px;
+}
+
+.logo_footer
+{
+    z-index: 92;
+    background-color: white;
+    width: 15%;
+    height: 66px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.link_footer
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 85%;
+}
+
+.footer_cesi
+{
+
+    height: 40px;
+    width: 95px;
+    padding-right : 5%;
+
+}
+.footer_bde
+{
+    width: 20%;
+
+}
+
+.footer_link
+{
+    text-decoration: none;
+    color: white;
+    margin: 5%;
+}
 
 @media only screen and (max-width: 1100px){
     .m-right{
@@ -129,75 +184,94 @@ span.m-toggle-icon:after{top: -14px;}
         display: flex;
     }
 
+    .footer_cesi
+    {
+        width:60px;
+        height: 25px;
+    }
+
+
  }
 
- .m-right.is-open{
+
+.m-right.is-open{
     transform: translateX(0);
     top: 66px;
 }
 
 .m-nav-toggle.is-open span.m-toggle-icon{
-   background: transparent;
+    background: transparent;
 }
 
 .m-nav-toggle.is-open span.m-toggle-icon:before, .m-nav-toggle.is-open span.m-toggle-icon:after{
-   transform-origin: center;
-   transform: rotate(45deg);
-   top: 0;
+    transform-origin: center;
+    transform: rotate(45deg);
+    top: 0;
 }
 
 .m-nav-toggle.is-open span.m-toggle-icon:after{
-   transform: rotate(-45deg);     
+    transform: rotate(-45deg);
 }
 
 .span.searchbar{
-     float: left;
-     display: block;
-     color: black;
-     text-align: center;
-     padding: 14px 16px;
-     text-decoration: none;
-     font-size: 17px;
- }
-
-.footer
- {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: black;
-    width: 100%;
-    height: 66px;
- }
-
- .logo_footer
- {
-     z-index: 92;
-     background-color: white;
-     width: 15%;
-     height: 66px;
- }
-
- .footer_cesi
- {
-     width: 50%;
-     padding-left : 10%;
-     padding-right : 10%;
-
- }
- .footer_bde
- {
-     width: 20%;
-
- }
-
- .footer_link
- {
-     text-decoration: none;
-     color: white;
-     margin: 5%;
- }
-
- .md-form {
     float: left;
- }
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+
+
+.md-form {
+    float: left;
+}
+
+
+
+@media all and (max-device-width : 480px ) {
+
+
+    .bde
+    {
+        font-size: 12pt;
+    }
+
+    .logocesi
+    {
+        width: 50px;
+        height: 50px;
+    }
+
+    .menu
+    {
+    height:66px;
+    }
+
+    .footer_link
+    {
+        font-size:7pt;
+        text-align: center;
+    }
+
+    .footer_cesi
+    {
+        width: 45px;
+        height: 15px;
+        margin-bottom: 10px;
+
+    }
+
+    .footer_bde
+    {
+        width:25px;
+    }
+
+    .logo_footer
+    {
+       flex-direction: column ;
+    }
+}
+
