Repsonsive on home

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -14,11 +14,7 @@ body {
   display: flex;
   justify-content: center;
   margin-left: 15%;
-  margin-top: 66px;
-  /*background-image: url("/img/bde.jpeg");
-  background-position: center;
-  height: 800px;
-  width: 100%;*/ }
+  margin-top: 66px; }
 
 .welcome_img {
   width: 100vw;
@@ -41,17 +37,6 @@ body {
   text-align: center;
   font-weight: bold; }
 
-/*.welcome1
-{
-    display: flex;
-    justify-content: center;
-    margin-left: 15%;
-    background-image: url("/img/evenement.jpeg");
-    background-position: center;
-    height: 800px;
-    width: 100vw;
-
-}*/
 .welcome_link {
   display: flex;
   justify-content: center;
@@ -91,15 +76,26 @@ body {
     }
 }*/
 @media all and (max-device-width: 480px) {
-  .presentation {
-    width: 160px; }
+  .blue_bar {
+    height: 30px; }
+
+  .welcome {
+    margin-top: 160px; }
 
   .titre {
-    font-size: 15pt; }
+    font-size: 42pt;
+    color: red; }
 
   .show {
-    font-size: 15pt;
-    width: 150px; } }
+    font-size: 42pt;
+    width: 400px; }
+
+  /*.welcome_link
+  {
+      height: 270px;
+  }*/
+  footer {
+    height: 160px; } }
 /*@media all and (device-width: 812px) and (device-height: 375px)
 {
     .welcome_img
