--- a/public/css/header.css
+++ b/public/css/header.css
@@ -212,6 +212,11 @@ footer
         height: 35px;
     }
 
+    .link_nav
+    {
+        height: 66px;
+    }
+
 
  }
 
@@ -273,6 +278,7 @@ footer
     {
 
         font-size: 46pt;
+        color: red;
     }
 
     .cesi
@@ -340,6 +346,11 @@ footer
     }
 
     /*FOOTER*/
+
+    footer
+    {
+        height: 160px;
+    }
 
     .footer_link
     {
