--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -19,25 +19,26 @@ body{ overflow-y: hidden}
 {
     display: flex;
     justify-content: center;
-    margin-left: 15%
+    margin-left: 15%;
+    margin-top: 66px;
 }
 
 .welcome_img
 {
-    width: 100%;
+    width: 100vw;
     opacity: 0.6;
 }
 
 .welcome_t
 {
-    font-size: 250%;
+    font-size: 36pt;
     background-color: $blue;
     color : $white;
     text-align: center;
     font-weight : normal;
     width: 450px;
     position: absolute;
-    margin-top : 15%;
+    margin-top : 10%;
 
 }
 
@@ -91,12 +92,11 @@ body{ overflow-y: hidden}
     font-weight: bold;
 }
 
-.location + .description
+.location, .description
 {
     color: $black;
     font-size: 120%;
 }
-
 
 
 .name
@@ -107,7 +107,7 @@ body{ overflow-y: hidden}
 }
 
 
-.show
+.show, .show_admin
 {
     background-color : $blue;
     color : $white;
@@ -119,6 +119,12 @@ body{ overflow-y: hidden}
     margin-bottom: 10px;
 
 
+}
+
+.show_admin
+{
+    font-size: 100%;
+    float: left;
 }
 
 .img_event
@@ -143,12 +149,7 @@ body{ overflow-y: hidden}
 @media screen and (max-width: 1100px)
 {
 
-    .welcome_t
-    {
-        width: 320px;
-        min-width: 180px;
-        font-size:200%;
-    }
+
 
     .event
     {
@@ -174,12 +175,87 @@ body{ overflow-y: hidden}
 
 @media all and (max-device-width : 480px )
 {
+    .blue_bar
+    {
+        height: 30px;
+    }
+
+    .welcome
+    {
+        margin-top: 160px;
+        margin-left: 210px;
+    }
+
+    .events
+    {
+        margin-left: 210px;
+    }
 
     .welcome_t
     {
         font-size: 25pt;
         width: 350px;
     }
+
+    .event
+    {
+
+        flex-direction :column;
+        align-items: center;
+
+    }
+
+    .welcome_t
+    {
+        font-size: 42pt;
+        width: 450px;
+    }
+
+    .t1
+    {
+        font-size: 30pt;
+    }
+
+    .t2
+    {
+        margin-left: 5px;
+        font-size: 24pt;
+    }
+
+    .img_event
+    {
+        width: 550px;
+    }
+
+    .texte
+    {
+        width: 550px;
+    }
+
+    .event_date
+    {
+        font-size: 24pt;
+    }
+
+    .location, .description
+    {
+        font-size: 23pt;
+    }
+
+    .name{
+        font-size: 24pt;
+    }
+
+    .show
+    {
+        font-size: 23pt;
+    }
+
+    .show_admin
+    {
+        font-size: 19pt;
+    }
+
 
 }
 
