--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -118,7 +118,13 @@ body{ overflow-y: hidden}
     margin-right:10px ;
     margin-bottom: 10px;
 
+}
 
+.show
+{
+    border:none;
+    border-radius:2px;
+    box-shadow:2px 2px 6px #999;
 }
 
 .show_admin
