--- a/public/css/show.css
+++ b/public/css/show.css
@@ -148,5 +148,33 @@ button:hover {
     border-radius: 2px;
     box-shadow: 2px 2px 6px #999;
     color: #FFFFFF; } }
+@media all and (max-device-width: 480px) {
+  .events {
+    margin-left: 210px;
+    margin-top: 160px; }
+
+  .event {
+    flex-direction: column;
+    align-items: center; }
+
+  .img_event {
+    width: 550px;
+    border-bottom: 30px solid #5D89DA; }
+
+  .texte {
+    width: 550px;
+    border-bottom: 30px solid #5D89DA; }
+
+  .event_date {
+    font-size: 34pt; }
+
+  .location, .description {
+    font-size: 33pt; }
+
+  .name {
+    font-size: 44pt; }
+
+  .show {
+    font-size: 23pt; } }
 
 /*# sourceMappingURL=show.css.map */
