--- a/resources/sass/home.scss
+++ b/resources/sass/home.scss
@@ -86,7 +86,7 @@ body{ overflow-y: hidden}
 
 //MEDIA QUERIES FOR PC AND IPAD
 
-/*@media screen and (max-width: 1100px)
+@media screen and (max-width: 600px)
 {
     .presentation
     {
@@ -105,7 +105,7 @@ body{ overflow-y: hidden}
         min-width: 180px;
         font-size:120%;
     }
-}*/
+}
 
 //MEDIA QUERIES FOR PHONE
 
@@ -116,18 +116,26 @@ body{ overflow-y: hidden}
         height:30px
     }
 
+
+
     .welcome
     {
+        margin:0;
         margin-top: 160px;
-        margin-left: 210px;
+        width: 100%;
 
+
+    }
+
+    .welcome_link
+    {
+        margin:0;
     }
 
     .titre
     {
 
         font-size: 42pt;
-        color: red;
     }
 
     .show
