--- a/public/css/home.css
+++ b/public/css/home.css
@@ -55,37 +55,32 @@ body {
   text-decoration: none;
   color: #FFFFFF; }
 
-/*@media screen and (max-width: 1100px)
-{
-    .presentation
-    {
-        width: 20%;
-        min-width: 150px ;
-    }
+@media screen and (max-width: 600px) {
+  .presentation {
+    width: 20%;
+    min-width: 150px; }
 
-    .titre
-    {
-        font-size: 120%;
-    }
+  .titre {
+    font-size: 120%; }
 
-    .show
-    {
-        width: 20%;
-        min-width: 180px;
-        font-size:120%;
-    }
-}*/
+  .show {
+    width: 20%;
+    min-width: 180px;
+    font-size: 120%; } }
 @media all and (max-device-width: 480px) {
   .blue_bar {
     height: 30px; }
 
   .welcome {
+    margin: 0;
     margin-top: 160px;
-    margin-left: 210px; }
+    width: 100%; }
+
+  .welcome_link {
+    margin: 0; }
 
   .titre {
-    font-size: 42pt;
-    color: red; }
+    font-size: 42pt; }
 
   .show {
     font-size: 42pt;
