--- a/public/css/index.css
+++ b/public/css/index.css
@@ -111,7 +111,10 @@ body {
     width: 550px; }
 
   .texte {
-    width: 550px; } }
+    width: 550px; }
+
+  .show_admin {
+    font-size: 8pt; } }
 @media all and (max-device-width: 480px) {
   .blue_bar {
     height: 30px; }
