EVERYTHING is responsive for home, events and show

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -114,17 +114,38 @@ body {
     width: 550px; }
 
   .show_admin {
-    font-size: 8pt; } }
+    font-size: 10pt; } }
+@media screen and (max-width: 800px) {
+  .welcome_t {
+    width: 20%;
+    min-width: 180px;
+    font-size: 120%; }
+
+  .show_admin {
+    font-size: 55%;
+    padding: 5px; }
+
+  .t1 {
+    font-size: 20pt; }
+
+  .t2 {
+    font-size: 15pt; }
+
+  .img_event {
+    width: 400px; }
+
+  .texte {
+    width: 400px; } }
 @media all and (max-device-width: 480px) {
   .blue_bar {
     height: 30px; }
 
   .welcome {
     margin-top: 160px;
-    margin-left: 210px; }
+    margin-left: 0; }
 
   .events {
-    margin-left: 210px; }
+    margin-left: 0; }
 
   .welcome_t {
     font-size: 25pt;
@@ -143,7 +164,8 @@ body {
 
   .t2 {
     margin-left: 5px;
-    font-size: 24pt; }
+    font-size: 24pt;
+    text-align: center; }
 
   .img_event {
     width: 550px; }
