--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -8,8 +8,9 @@ body{ overflow-y: hidden}
 .blue_bar
 {
     background-color: $blue;
-    width: 100%;
+    width: 6000px;
     height: 10px;
+
 }
 
 
@@ -46,7 +47,7 @@ body{ overflow-y: hidden}
 
 .events
 {
-    margin-left: 16%
+    margin-left: 15%
 }
 
 .t1
