--- a/public/css/home.css
+++ b/public/css/home.css
@@ -8,7 +8,8 @@ body {
 .blue_bar {
   background-color: #5D89DA;
   width: 100%;
-  height: 10px; }
+  height: 10px;
+  margin: 0; }
 
 .welcome {
   display: flex;
