--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,12 +3,15 @@ $font-size-base: 0.9rem;
 $line-height-base: 1.6;*/
 @import url("https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap");
 body {
-  overflow-y: hidden; }
+  overflow-y: hidden;
+  min-height: 100%;
+  position: relative; }
 
 .blue_bar {
   background-color: #5D89DA;
   width: 6000px;
-  height: 10px; }
+  height: 10px;
+  margin: 0; }
 
 .welcome {
   display: flex;
@@ -43,7 +46,8 @@ body {
   font-size: 160%;
   text-align: left;
   color: #000000;
-  font-weight: normal; }
+  font-weight: normal;
+  margin-left: 1%; }
 
 .event_date {
   color: #000000;
@@ -81,7 +85,7 @@ body {
   margin-right: 10px;
   margin-bottom: 10px; }
 
-.show {
+.show, .create {
   border: none;
   border-radius: 2px;
   box-shadow: 2px 2px 6px #999; }
@@ -100,7 +104,8 @@ body {
   text-decoration: none;
   font-size: 120%;
   padding: 10px;
-  margin: 15%; }
+  margin: 1% 1%;
+  float: right; }
 
 @media screen and (max-width: 1100px) {
   .event {
@@ -114,7 +119,12 @@ body {
     width: 550px; }
 
   .show_admin {
-    font-size: 10pt; } }
+    font-size: 10pt; }
+
+  .create {
+    float: left;
+    margin: 1% 26%;
+    font-size: 100%; } }
 @media screen and (max-width: 800px) {
   .welcome_t {
     width: 20%;
@@ -135,7 +145,11 @@ body {
     width: 400px; }
 
   .texte {
-    width: 400px; } }
+    width: 400px; }
+
+  .create {
+    float: left;
+    margin: 1% 30%; } }
 @media all and (max-device-width: 480px) {
   .blue_bar {
     height: 30px; }
@@ -186,6 +200,11 @@ body {
     font-size: 23pt; }
 
   .show_admin {
-    font-size: 19pt; } }
+    font-size: 19pt; }
+
+  .create {
+    float: left;
+    margin: 1% 30%;
+    font-size: 23pt; } }
 
 /*# sourceMappingURL=index.css.map */
