--- a/resources/sass/home.scss
+++ b/resources/sass/home.scss
@@ -1,7 +1,10 @@
 @import 'variables';
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap');
 
-body{ overflow-y: hidden}
+body{ overflow-y: hidden;
+    min-height:100%;
+    position: relative;
+}
 
 // BLUE BAR OF SEPARATION
 
