--- a/public/css/show.css
+++ b/public/css/show.css
@@ -2,6 +2,9 @@
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;*/
 @import url("https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap");
+html {
+  height: 100%; }
+
 body {
   overflow-y: hidden;
   min-height: 100%;
@@ -149,13 +152,23 @@ button:hover {
     padding: 6px;
     border-radius: 2px;
     box-shadow: 2px 2px 6px #999;
-    color: #FFFFFF; } }
+    color: #FFFFFF; }
+
+  .show {
+    float: right;
+    margin-bottom: 80px;
+    margin-right: 25%; } }
 @media screen and (max-width: 800px) {
   .img_event {
     width: 400px; }
 
   .texte {
-    width: 400px; } }
+    width: 400px; }
+
+  .show {
+    float: right;
+    margin-bottom: 80px;
+    margin-right: 12%; } }
 @media all and (max-device-width: 480px) {
   .events {
     margin-left: 0;
