--- a/public/css/create_edit.css
+++ b/public/css/create_edit.css
@@ -21,6 +21,9 @@ body {
   font-size: 260%;
   font-weight: normal; }
 
+.label {
+  font-size: 20pt; }
+
 input, textarea {
   font-size: 15pt;
   margin: 10px;
@@ -38,10 +41,16 @@ button {
   box-shadow: 2px 2px 6px #999;
   color: #FFFFFF;
   float: left;
-  margin-bottom: 10px; }
+  margin-top: 10px;
+  margin-bottom: 80px;
+  margin-right: 1%; }
 
 button:hover {
   background-color: #FFC252; }
+
+.choice {
+  display: flex;
+  justify-content: space-between; }
 
 @media all and (max-device-width: 480px) {
   .creation {
@@ -50,8 +59,10 @@ button:hover {
 
   .create {
     display: flex;
-    flex-direction: column;
-    align-items: center; }
+    flex-direction: column; }
+
+  .label {
+    font-size: 36pt; }
 
   .t1 {
     font-size: 46pt; }
@@ -62,6 +73,9 @@ button:hover {
 
   button {
     font-size: 46pt;
-    padding: 20px 50px; } }
+    padding: 20px 50px;
+    margin-bottom: 180px;
+    margin-top: 50px;
+    margin-left: 1%; } }
 
-/*# sourceMappingURL=create.css.map */
+/*# sourceMappingURL=create_edit.css.map */
