--- a/public/css/show.css
+++ b/public/css/show.css
@@ -82,7 +82,7 @@ body {
   padding: 10px;
   float: right;
   margin-right: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 80px;
   border: none;
   border-radius: 2px;
   box-shadow: 2px 2px 6px #999; }
@@ -110,6 +110,11 @@ button {
 
 button:hover {
   background-color: #FFC252; }
+
+.adminevents {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 16%; }
 
 @media screen and (max-width: 1100px) {
   .event {
@@ -157,7 +162,13 @@ button:hover {
   .show {
     float: right;
     margin-bottom: 80px;
-    margin-right: 25%; } }
+    margin-right: 25%; }
+
+  .adminevents {
+    justify-content: space-around; }
+
+  .adminevents > a {
+    margin-right: 0; } }
 @media screen and (max-width: 800px) {
   .img_event {
     width: 400px; }
@@ -206,12 +217,20 @@ button:hover {
     /*margin-right: 130px;*/
     float: left;
     margin: 3% 30%;
-    text-align: center; }
+    text-align: center;
+    margin-bottom: 180px; }
 
   .price {
-    font-size: 32pt; }
+    font-size: 15pt; }
 
   button {
-    font-size: 33pt; } }
+    font-size: 33pt; }
+
+  .adminevents {
+    justify-content: space-around;
+    margin-left: 0; }
+
+  .adminevents > a {
+    margin-left: 0; } }
 
 /*# sourceMappingURL=show.css.map */
