--- a/resources/sass/create_edit.scss
+++ b/resources/sass/create_edit.scss
@@ -29,6 +29,12 @@ body{
 
 }
 
+.label
+
+{
+    font-size: 20pt;
+}
+
 input, textarea
 {
     font-size: 15pt;
@@ -49,13 +55,21 @@ button
     box-shadow:2px 2px 6px #999;
     color: $white;
     float :left;
-    margin-bottom: 10px;
+    margin-top: 10px;
+    margin-bottom: 80px;
+    margin-right: 1%;
 
 }
 
 button:hover
 {
     background-color: $orange;
+}
+
+.choice
+{
+    display: flex;
+    justify-content: space-between;
 }
 
 //MEDIA QUERIES FOR PHONE
@@ -72,7 +86,12 @@ button:hover
     {
         display: flex;
         flex-direction: column;
-        align-items: center;
+
+    }
+
+    .label
+    {
+        font-size: 36pt;
     }
 
     .t1
@@ -90,5 +109,8 @@ button:hover
     {
         font-size: 46pt;
         padding: 20px 50px;
+        margin-bottom: 180px;
+        margin-top: 50px;
+        margin-left: 1%;
     }
 }
